--- a/pages/examples.html
+++ b/pages/examples.html
@@ -14,5 +14,6 @@
             <li><h2>Third example</h2></li>
             <img src="../images/ex cat 3.jpg" alt="A black-white hybrid chonker" width="310">
         </ul>
+        <p>Credits for images: online</p>
     </body>
 </html>
