--- a/pages/examples.html
+++ b/pages/examples.html
@@ -10,9 +10,9 @@
             <li><h2>First example</h2></li>
             <img src="../images/ex cat 1.jpg" alt="A black-white hybrid chonker" width="310">
             <li><h2>Second example</h2></li>
-            <img src="../images/ex cat 2.jpg" alt="A black-white hybrid chonker" width="310">
+            <img src="../images/ex cat 2.jpg" alt="A orange-white hybrid chonker" width="310">
             <li><h2>Third example</h2></li>
-            <img src="../images/ex cat 3.jpg" alt="A black-white hybrid chonker" width="310">
+            <img src="../images/ex cat 3.jpg" alt="A orange-white hybrid chonker" width="310">
         </ul>
         <p>Credits for images: online</p>
     </body>
