--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
             <em>this is a black-white hybrid chonker</em></a></p>
         <p><strong>More knowledge about chonker could be found
             <a href="pages/knowledge.html" target="_blank" rel="noopener norefferer">here</a></strong></p>
-        <p>For more examples of chonkers, check <a href="../pages/examples.html" target="_blank" rel="noopener noreferrer" style=><em>here</em></a></p>
+        <p>For more examples of chonkers, check <a href="pages/examples.html" target="_blank" rel="noopener noreferrer" style=><em>here</em></a></p>
     </body>
 </html>
